# vectordb

./: .gitignore  Cargo.toml
data/: file_map.json  pg1342.txt  pg1513.txt  pg2701.txt  pg84.txt
src/: build.rs  convert.rs  lib.rs  main.rs  types.rs
src/F/: utils.rs
src/tools/: convert.rs  embedder.rs  mod.rs  text_splitter.rs  writer.rs
src/utils/: utils.rs
